# demo-agent-cli

./: .gitignore  ATTRIBUTION.md  DESIGN.md  LANGGRAPH.md  PROBLEMS.md  QUICKSTART.md  README.md  README_ZH.md  SCHEMA_RETRY.md  harness.toml  pyproject.toml  resume.md  setup.bat
scripts/: analyze_attribution.py
src/harness/: __init__.py  __main__.py
src/harness/cli/: app.py  context.py  main.py  status.py
src/harness/config/: config.py
src/harness/core/: compaction.py  context.py  errors.py  loop.py  loop_delegate.py  session.py  subagent.py  token_counter.py
src/harness/eval/: __init__.py  metrics.py  reporter.py  runner.py
src/harness/langgraph/: __init__.py  checkpointer.py  complexity.py  delegate.py  gate.py  graphs.py  router.py  state.py  streaming.py  subagent.py  topology.py
src/harness/llm/: client.py  types.py
src/harness/logging/: __init__.py  task_logger.py
src/harness/memory/: store.py
src/harness/observability/: __init__.py  backend.py  langfuse_backend.py  noop_backend.py
src/harness/repomap/: cache.py  ranking.py  repomap.py  tags.py
src/harness/safety/: leak_detector.py  pipeline.py  sanitizer.py
tests/: conftest.py  test_architectures.py  test_attribution.py  test_compaction.py  test_config.py  test_eval.py  test_langgraph_complexity.py  test_langgraph_delegate.py  test_langgraph_gate.py  test_langgraph_graphs.py  test_langgraph_router.py  test_langgraph_state.py  test_loop.py  test_memory.py  test_observability.py  test_repomap.py  test_sandbox.py  test_tools.py
tests/e2e/: conftest.py  test_full_conversation.py
(+35 files in other folders)
